--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  hive: ^2.0.4
+  loggy: ^2.0.1
 
 dev_dependencies:
   flutter_test:
