--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.0.4
   loggy: ^2.0.1
+  hive_flutter: ^1.1.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
