--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
   hive_flutter: ^1.1.0
   http: ^0.13.4
   csv: ^5.0.0
+  hive_generator: ^1.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
