--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^0.13.4
   csv: ^5.0.0
   hive_generator: ^1.1.1
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
